@@ -13,18 +13,18 @@ ext {
     libraries = [
         mybatisVersion = '3.5.16',
         mybatisSpringVersion = '2.1.2',
-        mybatisSpringBootStarterVersion = '2.3.1',
-        springVersion = '5.3.34',
+        mybatisSpringBootStarterVersion = '2.3.2',
+        springVersion = '5.3.37',
         springBootVersion = '2.7.18',
-        springBoot3Version = '3.2.6',
+        springBoot3Version = '3.3.1',
         springCloudVersion = '3.1.8',
         jsqlparserVersion = '4.9',
         junitVersion = '5.10.2',
     ]
 
     lib = [
-        "kotlin-reflect"             : "org.jetbrains.kotlin:kotlin-reflect:1.9.24",
-        "kotlin-stdlib-jdk8"         : "org.jetbrains.kotlin:kotlin-stdlib-jdk8:1.9.24",
+        "kotlin-reflect"             : "org.jetbrains.kotlin:kotlin-reflect:2.0.0",
+        "kotlin-stdlib-jdk8"         : "org.jetbrains.kotlin:kotlin-stdlib-jdk8:2.0.0",
         "jsqlparser"                 : "com.github.jsqlparser:jsqlparser:${jsqlparserVersion}",
         "mybatis"                    : "org.mybatis:mybatis:${mybatisVersion}",
         "mybatis-spring"             : "org.mybatis:mybatis-spring:${mybatisSpringVersion}",
@@ -46,9 +46,9 @@ ext {
         "mybatis-spring-boot-starter": "org.mybatis.spring.boot:mybatis-spring-boot-starter:${mybatisSpringBootStarterVersion}",
         //test
         "spring-test"                : "org.springframework:spring-test:${springVersion}",
-        "assertj-core"               : "org.assertj:assertj-core:3.25.3",
+        "assertj-core"               : "org.assertj:assertj-core:3.26.0",
         "junit-jupiter"              : "org.junit.jupiter:junit-jupiter:${junitVersion}",
-        "fastjson"                   : "com.alibaba:fastjson:2.0.50",
+        "fastjson"                   : "com.alibaba:fastjson:2.0.51",
         "jackson"                    : "com.fasterxml.jackson.core:jackson-databind:2.17.1",
         "gson"                       : "com.google.code.gson:gson:2.11.0",
         "lagarto"                    : "org.jodd:jodd-lagarto:6.0.6",
@@ -60,14 +60,14 @@ ext {
         "dm"                         : fileTree(dir: 'libs', includes: ["jdbcDriver-18.jar"]),
         "h2"                         : "com.h2database:h2:2.2.224",
         "mysql"                      : "com.mysql:mysql-connector-j:8.4.0",
-        "sqlite"                     : "org.xerial:sqlite-jdbc:3.45.3.0",
-        "firebird"                   : "org.firebirdsql.jdbc:jaybird:5.0.4.java8",
+        "sqlite"                     : "org.xerial:sqlite-jdbc:3.46.0.0",
+        "firebird"                   : "org.firebirdsql.jdbc:jaybird:5.0.5.java8",
         //cache
         "mybatis-caffeine"           : "org.mybatis.caches:mybatis-caffeine:1.0.0",
         //code generator
         "velocity"            : "org.apache.velocity:velocity-engine-core:2.3",
-        "freemarker"          : "org.freemarker:freemarker:2.3.32",
-        "beetl"               : "com.ibeetl:beetl:3.16.1.RELEASE",
+        "freemarker"          : "org.freemarker:freemarker:2.3.33",
+        "beetl"               : "com.ibeetl:beetl:3.16.2.RELEASE",
         "swagger-annotations" : "io.swagger:swagger-annotations:1.6.14",
         "enjoy"               : "com.jfinal:enjoy:5.1.3",
         "logback-classic"     : "ch.qos.logback:logback-classic:1.5.6",
@@ -163,14 +163,6 @@ subprojects {
     test {
         dependsOn("cleanTest", "generatePomFileForMavenJavaPublication")
         useJUnitPlatform()
-        // 增加jvm参数不是一个很好的处理方案,最好还是只用java8下跑,下面只是兼容运行一下,但在高版本jdk下还有很多第三方反射库存在问题(等待完全升级)
-        // 部分测试用例如果需要在高版本java下运行用@EnabledOnJre
-        // 例如: https://github.com/cglib/cglib/issues/191
-//        if (JavaVersion.current().isJava9Compatible()) {
-//            jvmArgs += ["--add-opens", "java.base/java.lang=ALL-UNNAMED",
-//                        "--add-opens", "java.base/java.util=ALL-UNNAMED",
-//                        "--add-opens", "java.base/java.lang.invoke=ALL-UNNAMED"]
-//        }
         exclude("**/phoenix/**")
         exclude("**/postgresql/**")
 //        exclude("**/generator/**")
